--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,24 @@
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely need to edit after that.
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'jekyll serve'. If you change this file, please restart the server process.
+
+# Site settings
+title: Nguyen Binh
+email: binhnguyen@email.arizona.edu
+description: > # this means to ignore newlines until "baseurl:"
 theme: jekyll-theme-minimal
+url: "https://nguyenbinh1612.github.io" # the base hostname & protocol for your site
+github_username: nguyenbinh1612
+
+# Build settings
+sass:
+    sass_dir: _sass
+    include: ['_pages']
+
+exclude: [vendor]
+markdown: kramdown
+kramdown:
+      math_engine: katex
