--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: Nguyen Binh
-email: binhnguyen@email.arizona.edu
+email: binhnguyen@arizona.edu
 description: > # this means to ignore newlines until "baseurl:"
 theme: jekyll-theme-minimal
 url: "https://nguyenbinh1612.github.io" # the base hostname & protocol for your site
